Fixed overflow wrap being only used on <p>

--- a/static/main.css
+++ b/static/main.css
@@ -25,14 +25,11 @@ body {
 .box {
     width: 100%;
     padding-bottom: 10px
+    overflow-wrap: break-word
 }
 
 .box a {
     text-decoration: underline;
-}
-
-.box p {
-    overflow-wrap: break-word
 }
 
 .box_title {
